Issue #22113: struct.pack_into() now supports new buffer protocol (in particular accepts writable memoryview).